fix: auto mode and z-index of tooltips

--- a/src/index.css
+++ b/src/index.css
@@ -458,8 +458,9 @@ body {
   border: 1px solid var(--border);
   padding: 0.5rem;
   position: absolute;
-  bottom: -4rem;
+  bottom: -3rem;
   border-radius: 0.5rem;
+  z-index: 1;
 }
 
 .display {
@@ -571,7 +572,7 @@ body {
   transform: translate(-50%, -50%);
   background-color: var(--bgprimary);
   color: var(--text);
-  z-index: 1;
+  z-index: 2;
   padding: 2em;
   border-radius: 0.5rem;
 }
